@@ -189,6 +189,7 @@ export(lstar)
 export(mse)
 export(nlar)
 export(nnetTs)
+export(plot_ECT)
 export(predict_rolling)
 export(rank.select)
 export(rank.test)
